# cmake-testing

./: .gitignore  CMakeLists.txt  Example.hpp  README.md  build-all.sh
external-lib/class-a/: class-a.hpp
external-lib/complex/: complex.cpp  complex.hpp
external-lib/far-lib/: far-lib.hpp
external-lib/points/: points.c  points.h
inc/: Example.hpp
src/: CMakeLists.txt  Example.cpp  Makefile  main.cpp  submake.mk
src/example/: Example.cpp  Example.hpp
test/: CMakeLists.txt  ExampleTests.cpp  mock-class-a.h
test/doubles/: far-lib.hpp  mock-class-a.h
